5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1716_2499.log
== TEST (2019-05-14 17:17:24) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
a = 1
x = 0
while(cont < k):
	x = x + 1 /factorial(a)
	a = a + 1
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:17:57) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
a = 1
x = 0
while(cont < k):
	x = x + 1 /factorial(a)
	a = a + 1
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:18:11) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
a = 1
x = 0
while(cont < k):
	x = x + 1 /factorial(a)
	a = a + 1
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
1.71825397
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:02) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:19) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:25) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:31) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 17:21:40) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 17:21:42) 
-- CODE:
from math import*
k = int(input("numero: "))
cont = 0
x = 0
while(cont < k):
	x = x + 1 /factorial(cont)
	cont += 1
print(round(x, 8))
	
	
-- EXECUTION TIME:
0.177089
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:14:40) 
-- CODE:
from math import*
num=int(input("numero: "))
k=0
n=0
while(k<num):
	k=k*(1/factorial(k)
	n=n+1
print(round(n, 8))		  
				  
	
-- ERROR:
File "XXXX", line 7
    n=n+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:16:09) 
-- CODE:
from math import*
num=int(input("numero: "))
k=0
n=0
while(k<num):
	n=n+1/factorial(k)
	k=k+1
print(round(n, 8))		  
				  	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:16:23) 
-- CODE:
from math import*
num=int(input("numero: "))
k=0
n=0
while(k<num):
	n=n+1/factorial(k)
	k=k+1
print(round(n, 8))		  
				  	
-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 23:16:32) 
-- CODE:
from math import*
num=int(input("numero: "))
k=0
n=0
while(k<num):
	n=n+1/factorial(k)
	k=k+1
print(round(n, 8))		  
				  	
-- EXECUTION TIME:
0.1755
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
